1558
As I noted in a comment above yours, albeit perhaps unclearly, it is not an interpreter issue per se, but the way it manifests in the repl is more of a problem because you cannot easily work around it with the full path when the full path involves a secret hidden object.
```
scala> object ~ { val x = 5 }
defined module $tilde
scala> ~.x
<console>:1: error: illegal start of simple expression
       ~.x
        ^
// can't really expect people to figure this one out
scala> $line27.$read.$iw.$iw.$iw.$iw.$iw.$iw.$iw.$iw.$iw.$iw.~.x
res4: Int = 5
```
